.metals/metals.log
2022.10.14 08:25:27 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /home/phil/Dokumente/Othello/.metals/lsp.trace.json or /home/phil/.cache/metals/lsp.trace.json
2022.10.14 08:25:27 INFO  logging to file /home/phil/Dokumente/Othello/.metals/metals.log
2022.10.14 08:25:27 INFO  Started: Metals version 0.11.9 in workspace '/home/phil/Dokumente/Othello' for client Visual Studio Code 1.71.2.
2022.10.14 08:25:28 INFO  time: initialize in 1.23s
2022.10.14 08:25:30 WARN  Build server is not auto-connectable.
2022.10.14 08:25:37 INFO  no build target found for /home/phil/Dokumente/Othello/src/main/scala/othello.worksheet.sc. Using presentation compiler with project's scala-library version: 3.2.0
2022.10.14 08:25:37 WARN  no build target for: /home/phil/Dokumente/Othello/src/main/scala/Main.scala
Okt. 14, 2022 8:25:37 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNUNG: Unmatched cancel notification for request id 5
2022.10.14 08:25:39 INFO  time: code lens generation in 2.9s
Okt. 14, 2022 8:25:40 AM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFORMATION: Unsupported notification method: $/setTrace
2022.10.14 08:25:40 INFO  no build target found for /home/phil/Dokumente/Othello/src/main/scala/othello.worksheet.sc. Using presentation compiler with project's scala-library version: 3.2.0
2022.10.14 08:25:40 INFO  time: evaluated worksheet 'othello.worksheet.sc' in 4.71s
2022.10.14 08:25:40 INFO  time: evaluated worksheet 'othello.worksheet.sc' in 0.56s
2022.10.14 08:26:45 WARN  no build target for: /home/phil/Dokumente/Othello/src/main/scala/Main.scala
2022.10.14 08:35:15 WARN  no build target for: /home/phil/Dokumente/Othello/src/main/scala/Main.scala
2022.10.14 08:35:26 WARN  no build target for: /home/phil/Dokumente/Othello/src/main/scala/Main.scala
2022.10.14 08:35:27 INFO  time: evaluated worksheet 'othello.worksheet.sc' in 0.43s
2022.10.14 08:35:49 INFO  time: evaluated worksheet 'othello.worksheet.sc' in 0.39s
2022.10.14 08:36:45 WARN  no build target for: /home/phil/Dokumente/Othello/src/main/scala/Main.scala
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.5.3/scalafmt-core_2.13-3.5.3.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.5.3/scalafmt-core_2.13-3.5.3.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/scalameta_2.13/4.5.5/scalameta_2.13-4.5.5.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.5.3/scalafmt-sysops_2.13-3.5.3.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.5.3/scalafmt-config_2.13-3.5.3.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalameta_2.13/4.5.5/scalameta_2.13-4.5.5.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.5.3/scalafmt-sysops_2.13-3.5.3.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.5.3/scalafmt-config_2.13-3.5.3.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/parsers_2.13/4.5.5/parsers_2.13-4.5.5.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/parsers_2.13/4.5.5/parsers_2.13-4.5.5.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/trees_2.13/4.5.5/trees_2.13-4.5.5.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/trees_2.13/4.5.5/trees_2.13-4.5.5.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/common_2.13/4.5.5/common_2.13-4.5.5.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/common_2.13/4.5.5/common_2.13-4.5.5.pom
Downloading https://repo1.maven.org/maven2/com/lihaoyi/sourcecode_2.13/0.2.7/sourcecode_2.13-0.2.7.pom
Downloaded https://repo1.maven.org/maven2/com/lihaoyi/sourcecode_2.13/0.2.7/sourcecode_2.13-0.2.7.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.5.3/scalafmt-core_2.13-3.5.3.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/parsers_2.13/4.5.5/parsers_2.13-4.5.5.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.5.3/scalafmt-sysops_2.13-3.5.3.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/common_2.13/4.5.5/common_2.13-4.5.5.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.5.3/scalafmt-config_2.13-3.5.3.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/scalameta_2.13/4.5.5/scalameta_2.13-4.5.5.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.5.3/scalafmt-config_2.13-3.5.3.jar
Downloading https://repo1.maven.org/maven2/com/lihaoyi/sourcecode_2.13/0.2.7/sourcecode_2.13-0.2.7.jar
Downloaded https://repo1.maven.org/maven2/com/lihaoyi/sourcecode_2.13/0.2.7/sourcecode_2.13-0.2.7.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/trees_2.13/4.5.5/trees_2.13-4.5.5.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.5.3/scalafmt-sysops_2.13-3.5.3.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalameta_2.13/4.5.5/scalameta_2.13-4.5.5.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/parsers_2.13/4.5.5/parsers_2.13-4.5.5.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/common_2.13/4.5.5/common_2.13-4.5.5.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.5.3/scalafmt-core_2.13-3.5.3.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/trees_2.13/4.5.5/trees_2.13-4.5.5.jar
2022.10.14 08:36:56 ERROR scalafmt: /home/phil/Dokumente/Othello/src/main/scala/Main.scala:1: error: [dialect scala213] expected start of definition
@main def Othello: Unit = 
      ^
2022.10.14 08:36:56 WARN  no build target for: /home/phil/Dokumente/Othello/src/main/scala/Main.scala
Okt. 14, 2022 8:37:15 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNUNG: Unmatched cancel notification for request id 392
2022.10.14 08:37:52 ERROR scalafmt: /home/phil/Dokumente/Othello/src/main/scala/Main.scala:1: error: [dialect scala213] expected start of definition
@main def Othello: Unit = 
      ^
2022.10.14 08:37:52 WARN  no build target for: /home/phil/Dokumente/Othello/src/main/scala/Main.scala
2022.10.14 08:38:23 INFO  time: evaluated worksheet 'othello.worksheet.sc' in 0.36s
